from abc import ABC


class PlayerAction(ABC): ...
